Fixes alignment of radio button for thumbnail in file manager.

--- a/app/assets/stylesheets/hyrax/_file_manager.scss
+++ b/app/assets/stylesheets/hyrax/_file_manager.scss
@@ -105,6 +105,7 @@
       }
       input[type=radio] {
         width: 20px;
+        position: relative;
       }
     }
   }
